--- a/.github/workflows/python-greetings.yml
+++ b/.github/workflows/python-greetings.yml
@@ -11,11 +11,29 @@ jobs:
   install-pip-deps:
     runs-on: self-hosted
     steps:
+      - name: Informational output
+        run: echo "Installing all required dependencies..."
+      
       - name: Checkout repository
         uses: actions/checkout@v4
         
+      - name: Checkout Python Greetings repository
+        uses: actions/checkout@v4
+        with:
+          repository: mtararujs/python-greetings
+          path: python-greetings
+          
       - name: Install dependencies
-        uses: ./.github/actions/install-deps
+        run: |
+          echo "Starting dependency installation..."
+          cd python-greetings
+          
+          python3 -m venv venv
+        
+          source venv/bin/activate
+          pip install -r requirements.txt
+          
+          echo "Dependencies installed successfully!"
         
   deploy-to-dev:
     needs: install-pip-deps
